<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ticketBooking"
            android:checked="false"
            android:icon="@null"
            android:title="@string/bookTicket"/>

        <item
            android:id="@+id/survey"
            android:checked="false"
            android:icon="@null"
            android:title="@string/survey"/>

        <item
            android:id="@+id/bookingHistory"
            android:checked="false"
            android:icon="@null"
            android:title="@string/bookingHistory"/>

        <item
            android:id="@+id/termsCondition"
            android:checked="false"
            android:icon="@null"
            android:title="@string/termscondition"/>
        <item
            android:id="@+id/feedback"
            android:checked="false"
            android:icon="@null"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/userSettings"
            android:checked="false"
            android:icon="@null"
            android:title="@string/settings"/>

    </group>
</menu>